package edu.hitsz.supply;

public interface BombListener {
    void onBomb();
    boolean notValid();
}
